--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     React.createElement('div', { className: "relative w-full aspect-video pt-8 bg-[#0d1117]" },
                          !loaded && React.createElement('div', { className: "absolute inset-0 top-8 shimmer w-full h-full z-0" }),
                          React.createElement('img', {
-                            src: "https://github.com/iamvany30/unisound-desktop/blob/main/image.jpg?raw=true",
+                            src: "https://raw.githubusercontent.com/iamvany30/unisound-desktop/refs/heads/main/UniSound.png",
                             alt: "App Screenshot",
                             className: `absolute inset-0 top-8 w-full h-full object-cover transition-opacity duration-700 ${loaded ? 'opacity-100' : 'opacity-0'} z-10`,
                             onLoad: () => setLoaded(true)
